src/pages/MainPage/MainPage.module.css
.hero {
  background-image: url('../../assets/img/mob_hero_1x-min.png');
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
}

@media screen and (min-resolution: 192dpi),
  (-webkit-min-device-pixel-ratio: 2),
  (min-resolution: 2dppx) {
  .hero {
    background-image: url('../../assets/img/mob_hero_2x-min.png');
  }
}

.container {
  max-width: 393px;
  width: 100%;
  margin: 0 auto;
  padding: 0 16px;
}

.heroContent {
  padding: 128px 16px 96px;
}

.heroTitle {
  color: var(--white);
  font-size: clamp(28px, 10vw, 40px);
  font-weight: var(--semibold-font-weight);
  line-height: 1.22;
  margin-bottom: 24px;
}

.recipesSection {
  padding-top: 36px;
  padding-bottom: 36px;
}

.recipesTitle {
  font-size: clamp(15px, 6vw, 32px);
  font-weight: var(--semibold-font-weight);
  line-height: 39px;
  margin-bottom: 16px;
}

.recipesCount {
  font-size: 18px;
  font-weight: var(--semibold-font-weight);
  line-height: 22px;
}

.filterContainer {
  display: flex;
  justify-content: space-between;
  margin-bottom: 16px;
}

.loadMoreBtn {
  padding: 12px 16px;
  font-size: 18px;
  width: 100%;
  line-height: 22px;
  margin: 0 auto;
}

@media screen and (min-width: 393px) {
  .heroTitle {
    font-size: 40px;
  }
  .recipesSection {
    padding-top: 48px;
    padding-bottom: 48px;
  }
}

@media screen and (min-width: 768px) {
  .hero {
    background-image: url('../../assets/img/tab_hero_1x-min.png');
  }

  @media screen and (min-resolution: 192dpi),
    (-webkit-min-device-pixel-ratio: 2),
    (min-resolution: 2dppx) {
    .hero {
      background-image: url('../../assets/img/tab_hero_2x-min.png');
    }
  }
  .container {
    max-width: 768px;
    padding: 0 32px;
  }

  .heroContent {
    padding: 128px 0;
  }

  .heroTitle {
    font-size: 48px;
    line-height: 1.1;
  }

  .recipesSection {
    padding-top: 48px;
    padding-bottom: 48px;
  }

  .recipesTitle {
    font-size: 40px;
    line-height: 49px;
  }
}

@media screen and (min-width: 1440px) {
  .hero {
    background-image: url('../../assets/img/pc_hero_1x-min.png');
  }

  @media screen and (min-resolution: 192dpi),
    (-webkit-min-device-pixel-ratio: 2),
    (min-resolution: 2dppx) {
    .hero {
      background-image: url('../../assets/img/pc_hero_2x-min.png');
    }
  }

  .container {
    max-width: 1440px;
    padding: 0 108px;
  }

  .heroContent {
    padding: 128px 0;
  }

  .heroTitle {
    font-size: 48px;
    font-weight: 600;
    line-height: 59px;
  }

  .recipesSection {
    padding-top: 48px;
    padding-bottom: 48px;
  }

  .loadMoreBtn {
    max-width: 289px;
    padding: 16px 16px;
    font-size: 18px;
    font-weight: var(--semibold-font-weight);
    width: 100%;
    line-height: 22px;
    margin: 0 auto;
    transition: border 0.3s ease-in-out;
    &:is(:hover, :focus) {
      border: 2px solid var(--dark-brown);
    }
  }
}

